Added access-check routes
